--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <title>Sthefanny Silva — Resume</title>
+</head>
+<body>
 <div>
 <h3><a href="project2.html">Project 2 Title</a></h3>
 <p><!-- TODO: 1–2 sentence description. --></p>
