--- a/project1.html
+++ b/project1.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <title>Sthefanny Silva — Resume</title>
+</head>
+<body>
 <li><a href="project1.html" aria-current="page">Project 1</a></li>
 <li><a href="project2.html">Project 2</a></li>
 </ul>
