--- a/project2.html
+++ b/project2.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <title>Sthefanny Silva — Resume</title>
+</head>
+<body>
 <title>Project 2 — Sthefanny Silva</title>
 </head>
 <body>
