--- a/project1.html
+++ b/project1.html
@@ -1,86 +1,93 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Project 1 — Sthefanny Silva" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
-  <title>Sthefanny Silva — Resume</title>
+  <title>Project 1 — Sthefanny Silva</title>
 </head>
 <body>
-<li><a href="project1.html" aria-current="page">Project 1</a></li>
-<li><a href="project2.html">Project 2</a></li>
-</ul>
-</nav>
-<div class="header-actions">
-<button id="contrastToggle" class="action-button" aria-pressed="false" aria-label="Toggle high contrast">High Contrast</button>
-</div>
-</header>
+  <a class="skip-link" href="#content">Skip to content</a>
 
+  <header class="site-header" role="banner">
+    <div class="brand">
+      <h1 class="site-title">Project 1</h1>
+      <p class="site-tagline">Details &amp; Skills Learned</p>
+    </div>
 
-<main id="content" class="narrow" role="main">
-<article class="project">
-<header>
-<h2><!-- TODO: Project 1 Title --></h2>
-<p class="project-meta"><!-- TODO: Course or context, date range --></p>
-</header>
+    <button id="navToggle" class="icon-button" aria-expanded="false" aria-controls="site-nav" aria-label="Open navigation">☰</button>
 
+    <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
+      <ul>
+        <li><a href="index.html">Home/Resume</a></li>
+        <li><a href="project1.html" aria-current="page">Project 1</a></li>
+        <li><a href="project2.html">Project 2</a></li>
+      </ul>
+    </nav>
 
-<figure class="project-figure">
-<img src="assets/images/project1.jpg" alt="Image illustrating Project 1" />
-<figcaption><!-- TODO: Short alt description for context (optional if alt above is descriptive) --></figcaption>
-</figure>
+    <div class="header-actions">
+      <button id="contrastToggle" class="action-button" aria-pressed="false" aria-label="Toggle high contrast">High Contrast</button>
+    </div>
+  </header>
 
+  <main id="content" class="narrow" role="main">
+    <article class="project">
+      <header>
+        <h2><!-- TODO: Project 1 Title --></h2>
+        <p class="project-meta"><!-- TODO: Course or context, date range --></p>
+      </header>
 
-<section aria-labelledby="p1-desc">
-<h3 id="p1-desc">Description</h3>
-<p><!-- TODO: Paragraph describing problem, approach, outcome. --></p>
-</section>
+      <figure class="project-figure">
+        <img src="assets/images/project1.jpg" alt="Image illustrating Project 1" />
+        <figcaption><!-- Optional short caption for context. --></figcaption>
+      </figure>
 
+      <section aria-labelledby="p1-desc">
+        <h3 id="p1-desc">Description</h3>
+        <p><!-- TODO: Paragraph describing problem, approach, outcome. --></p>
+      </section>
 
-<section aria-labelledby="p1-skills">
-<h3 id="p1-skills">Skills Learned</h3>
-<ul>
-<li><!-- TODO: Skill 1 --></li>
-<li><!-- TODO: Skill 2 --></li>
-<li><!-- TODO: Skill 3 --></li>
-<li><!-- TODO: Skill 4 --></li>
-</ul>
-</section>
-</article>
-</main>
+      <section aria-labelledby="p1-skills">
+        <h3 id="p1-skills">Skills Learned</h3>
+        <ul>
+          <li>Semantic HTML5 &amp; CSS3</li>
+          <li>Responsive layout (Flexbox/Grid)</li>
+          <li>Accessibility (WCAG/ARIA, focus management)</li>
+          <li>Version control with Git &amp; GitHub Pages</li>
+        </ul>
+      </section>
+    </article>
+  </main>
 
+  <footer class="site-footer" role="contentinfo">
+    <p>© <span id="year"></span> Sthefanny Silva</p>
+  </footer>
 
-<footer class="site-footer" role="contentinfo">
-<p>© <span id="year"></span> Sthefanny Silva</p>
-</footer>
+  <script>
+    const navToggle = document.getElementById('navToggle');
+    const siteNav = document.getElementById('site-nav');
+    navToggle.addEventListener('click', () => {
+      const expanded = navToggle.getAttribute('aria-expanded') === 'true';
+      navToggle.setAttribute('aria-expanded', String(!expanded));
+      siteNav.classList.toggle('open');
+    });
 
+    const contrastToggle = document.getElementById('contrastToggle');
+    const root = document.documentElement;
+    const CONTRAST_KEY = 'contrast:high';
+    function setContrast(on){
+      if (on) { root.classList.add('contrast-high'); contrastToggle.setAttribute('aria-pressed','true'); }
+      else { root.classList.remove('contrast-high'); contrastToggle.setAttribute('aria-pressed','false'); }
+    }
+    setContrast(localStorage.getItem(CONTRAST_KEY) === '1');
+    contrastToggle.addEventListener('click', () => {
+      const nowHigh = !root.classList.contains('contrast-high');
+      setContrast(nowHigh);
+      localStorage.setItem(CONTRAST_KEY, nowHigh ? '1' : '0');
+    });
 
-<script>
-const navToggle = document.getElementById('navToggle');
-const siteNav = document.getElementById('site-nav');
-navToggle.addEventListener('click', () => {
-const expanded = navToggle.getAttribute('aria-expanded') === 'true';
-navToggle.setAttribute('aria-expanded', String(!expanded));
-siteNav.classList.toggle('open');
-});
-
-
-const contrastToggle = document.getElementById('contrastToggle');
-const root = document.documentElement;
-const CONTRAST_KEY = 'contrast:high';
-function setContrast(on){
-if (on) { root.classList.add('contrast-high'); contrastToggle.setAttribute('aria-pressed','true'); }
-else { root.classList.remove('contrast-high'); contrastToggle.setAttribute('aria-pressed','false'); }
-}
-setContrast(localStorage.getItem(CONTRAST_KEY) === '1');
-contrastToggle.addEventListener('click', () => {
-const nowHigh = !root.classList.contains('contrast-high');
-setContrast(nowHigh);
-localStorage.setItem(CONTRAST_KEY, nowHigh ? '1' : '0');
-});
-
-
-document.getElementById('year').textContent = new Date().getFullYear();
-</script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
