--- a/project2.html
+++ b/project2.html
@@ -1,99 +1,154 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
-  <title>Sthefanny Silva — Resume</title>
-</head>
-<body>
-<title>Project 2 — Sthefanny Silva</title>
-</head>
-<body>
-<a class="skip-link" href="#content">Skip to content</a>
-<header class="site-header" role="banner">
-<div class="brand">
-<h1 class="site-title">Project 2</h1>
-<p class="site-tagline">Details & Skills Learned</p>
-</div>
-<button id="navToggle" class="icon-button" aria-expanded="false" aria-controls="site-nav" aria-label="Open navigation">☰</button>
-<nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
-<ul>
-<li><a href="index.html">Home/Resume</a></li>
-<li><a href="project1.html">Project 1</a></li>
-<li><a href="project2.html" aria-current="page">Project 2</a></li>
-</ul>
-</nav>
-<div class="header-actions">
-<button id="contrastToggle" class="action-button" aria-pressed="false" aria-label="Toggle high contrast">High Contrast</button>
-</div>
-</header>
+/*
+Theme: minimal · modern · professional
+Palette: black, beige/tan, white
+Fonts: Headings — Cambria/serif; Body — system sans
+Accessibility: high-contrast toggle, visible focus, reduced motion
+*/
 
+:root {
+  /* Base palette */
+  --bg: #ffffff;
+  --text: #161616;
+  --muted: #6b6b6b;
+  --beige: #efe7dc;         /* soft tan */
+  --accent: #111111;        /* near-black accents */
+  --card-bg: #f8f6f2;       /* light beige for cards */
+  --link: #0a0a0a;
 
-<main id="content" class="narrow" role="main">
-<article class="project">
-<header>
-<h2><!-- TODO: Project 2 Title --></h2>
-<p class="project-meta"><!-- TODO: Course or context, date range --></p>
-</header>
+  --radius: 14px;
+  --shadow: 0 10px 24px rgba(0,0,0,.08);
 
+  --font-body: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  --font-heading: Cambria, Georgia, "Times New Roman", serif;
 
-<figure class="project-figure">
-<img src="assets/images/project2.jpg" alt="Image illustrating Project 2" />
-<figcaption><!-- TODO: Optional contextual caption. --></figcaption>
-</figure>
-
-
-<section aria-labelledby="p2-desc">
-<h3 id="p2-desc">Description</h3>
-<p><!-- TODO: Paragraph describing problem, approach, outcome. --></p>
-</section>
-
-
-<section aria-labelledby="p2-skills">
-<h3 id="p2-skills">Skills Learned</h3>
-<ul>
-<li><!-- TODO: Skill 1 --></li>
-<li><!-- TODO: Skill 2 --></li>
-<li><!-- TODO: Skill 3 --></li>
-<li><!-- TODO: Skill 4 --></li>
-</ul>
-</section>
-</article>
-</main>
-
-
-<footer class="site-footer" role="contentinfo">
-<p>© <span id="year"></span> Sthefanny Silva</p>
-</footer>
-
-
-<script>
-const navToggle = document.getElementById('navToggle');
-const siteNav = document.getElementById('site-nav');
-navToggle.addEventListener('click', () => {
-const expanded = navToggle.getAttribute('aria-expanded') === 'true';
-navToggle.setAttribute('aria-expanded', String(!expanded));
-siteNav.classList.toggle('open');
-});
-
-
-const contrastToggle = document.getElementById('contrastToggle');
-const root = document.documentElement;
-const CONTRAST_KEY = 'contrast:high';
-function setContrast(on){
-if (on) { root.classList.add('contrast-high'); contrastToggle.setAttribute('aria-pressed','true'); }
-else { root.classList.remove('contrast-high'); contrastToggle.setAttribute('aria-pressed','false'); }
+  --size-0: 12px;
+  --size-1: 14px;
+  --size-2: 16px; /* base */
+  --size-3: 18px;
+  --size-4: 22px;
+  --size-5: 28px;
+  --size-6: 36px;
 }
-setContrast(localStorage.getItem(CONTRAST_KEY) === '1');
-contrastToggle.addEventListener('click', () => {
-const nowHigh = !root.classList.contains('contrast-high');
-setContrast(nowHigh);
-localStorage.setItem(CONTRAST_KEY, nowHigh ? '1' : '0');
-});
 
+/* High contrast mode overrides */
+.contrast-high {
+  --bg: #000000;
+  --text: #ffffff;
+  --muted: #e0e0e0;
+  --beige: #222222;
+  --accent: #ffffff;
+  --card-bg: #111111;
+  --link: #58a6ff;
+  --shadow: none;
+}
 
-document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
+/* Reset & base */
+* { box-sizing: border-box; }
+html { scroll-behavior: smooth; }
+@media (prefers-reduced-motion: reduce) { html { scroll-behavior: auto; } }
+
+body {
+  margin: 0;
+  background: var(--bg);
+  color: var(--text);
+  font-family: var(--font-body);
+  font-size: var(--size-3); /* larger base */
+  line-height: 1.6;
+}
+
+img { max-width: 100%; height: auto; display: block; }
+
+h1,h2,h3,h4 { font-family: var(--font-heading); color: var(--accent); margin: 0 0 .5rem; }
+.site-title { font-size: clamp(var(--size-5), 3.2vw, 42px); }
+p { margin: 0 0 1rem; }
+
+/* Skip link */
+.skip-link {
+  position: absolute; left: -9999px; top: auto; width: 1px; height: 1px; overflow: hidden;
+}
+.skip-link:focus {
+  position: static; width: auto; height: auto; padding: .5rem .75rem; background: var(--beige); border-radius: 6px;
+}
+
+/* Header */
+.site-header {
+  position: sticky; top: 0; z-index: 10;
+  display: grid; grid-template-columns: 1fr auto auto; gap: 1rem;
+  align-items: center; padding: .75rem 1rem; background: var(--bg);
+  border-bottom: 1px solid rgba(0,0,0,.06);
+}
+.brand .site-tagline { color: var(--muted); font-size: var(--size-1); }
+
+.icon-button, .action-button {
+  font: inherit; border: 1px solid rgba(0,0,0,.12); background: var(--card-bg); color: var(--text);
+  padding: .5rem .75rem; border-radius: 8px; cursor: pointer;
+}
+.icon-button { line-height: 1; }
+.header-actions { display: flex; gap: .5rem; }
+
+/* Nav */
+.site-nav { display: none; }
+.site-nav.open { display: block; }
+.site-nav ul { list-style: none; margin: 0; padding: 0; display: flex; gap: 1rem; }
+.site-nav a { text-decoration: none; color: var(--link); padding: .25rem .5rem; border-radius: 6px; }
+.site-nav a[aria-current="page"] { background: var(--card-bg); }
+
+@media (min-width: 900px) {
+  .site-header { grid-template-columns: 1fr auto 1fr; }
+  #navToggle { display: none; }         /* hide hamburger on desktop */
+  .site-nav { display: block; }
+  .site-nav ul { justify-content: center; }
+  .header-actions { justify-content: flex-end; }
+}
+
+/* Layout */
+.layout {
+  display: grid; gap: 1.5rem; padding: 1.25rem; max-width: 1200px; margin: 0 auto;
+}
+.sidebar {
+  display: grid; gap: 1rem; align-content: start; background: var(--card-bg);
+  padding: 1rem; border-radius: var(--radius); box-shadow: var(--shadow);
+}
+.main-column { display: grid; gap: 1rem; }
+
+@media (min-width: 900px) {
+  .layout { grid-template-columns: 320px 1fr; align-items: start; }
+}
+
+.headshot { width: 100%; border-radius: 8px; object-fit: cover; }
+
+.card {
+  background: var(--card-bg); padding: 1rem; border-radius: var(--radius); box-shadow: var(--shadow);
+}
+
+.contact-list { list-style: none; padding: 0; margin: 0; }
+.contact-list li { margin: .25rem 0; }
+
+.skill-groups { display: grid; gap: .75rem; }
+.skill-groups article { background: rgba(0,0,0,.03); padding: .75rem; border-radius: 10px; }
+
+/* Projects on home */
+.project-cards { display: grid; gap: 1rem; }
+.project-card { display: grid; grid-template-columns: 120px 1fr; gap: 1rem; background: rgba(0,0,0,.03); padding: .75rem; border-radius: 12px; align-items: start; }
+.project-card img { border-radius: 8px; }
+.badges { list-style: none; padding: 0; margin: .5rem 0 0; display: flex; gap: .5rem; flex-wrap: wrap; }
+.badges li { background: #e8e2d7; padding: .2rem .5rem; border-radius: 999px; font-size: var(--size-1); }
+
+/* Project pages */
+.narrow { max-width: 900px; margin: 0 auto; padding: 1.25rem; }
+.project-figure { margin: 1rem 0; }
+.project-figure img { border-radius: 12px; }
+
+/* Footer */
+.site-footer { padding: 2rem 1rem; text-align: center; color: var(--muted); }
+
+/* Links & focus */
+a { color: var(--link); }
+:focus-visible { outline: 3px solid #3b82f6; outline-offset: 2px; border-radius: 6px; }
+
+/* Print (nice PDF export) */
+@media print {
+  .site-header, .site-footer, .project-cards img, .header-actions, #navToggle { display: none !important; }
+  .layout { display: block; padding: 0; }
+  .card, .sidebar { box-shadow: none; background: #fff; }
+}
