--- a/index.html
+++ b/index.html
@@ -47,66 +47,6 @@
         </ul>
       </section>
 
-      <!-- UPDATED SKILLS for this project -->
-      <section class="skills" aria-labelledby="skills-heading">
-        <h2 id="skills-heading">Skills</h2>
-        <div class="skill-groups">
-          <article>
-            <h3>Web Languages</h3>
-            <ul>
-              <li>HTML5 (semantic structure)</li>
-              <li>CSS3 (variables, media queries)</li>
-              <li>JavaScript (vanilla UI toggles)</li>
-            </ul>
-          </article>
-
-          <article>
-            <h3>Frontend & Responsive</h3>
-            <ul>
-              <li>Mobile-first, responsive layout</li>
-              <li>Flexbox & CSS Grid</li>
-              <li>Reusable components (cards, badges)</li>
-            </ul>
-          </article>
-
-          <article>
-            <h3>Accessibility & QA</h3>
-            <ul>
-              <li>WCAG-aligned: color contrast, focus states</li>
-              <li>WAI-ARIA landmarks & labels</li>
-              <li>Reduced motion & High-contrast modes</li>
-              <li>W3C/WAVE validation</li>
-            </ul>
-          </article>
-
-          <article>
-            <h3>Tools & Workflow</h3>
-            <ul>
-              <li>Git & GitHub</li>
-              <li>GitHub Pages deployment</li>
-              <li>Browser DevTools debugging</li>
-            </ul>
-          </article>
-
-          <article>
-            <h3>Certifications</h3>
-            <ul>
-              <li>CompTIA (2)</li>
-              <li>TestOut CyberDefense Pro</li>
-              <li>TestOut IT Fundamentals Pro</li>
-              <li>Working toward: CCST/CCNA, Network+, Security+</li>
-            </ul>
-          </article>
-        </div>
-      </section>
-
-      <!-- Remove this entire section if none -->
-      <section class="awards" aria-labelledby="awards-heading">
-        <h2 id="awards-heading">Awards & Honors</h2>
-        <p><!-- TODO: Add awards or delete this section. --></p>
-      </section>
-    </aside>
-
     <!-- Main column -->
     <section class="main-column">
       <section aria-labelledby="objective-heading" class="card">
@@ -170,6 +110,39 @@
       </section>
     </section>
   </main>
+
+        <!-- UPDATED SKILLS for this project -->
+        <section class="skills" aria-labelledby="skills-heading">
+            <h2 id="skills-heading">Skills</h2>
+            <div class="skill-groups">
+              <article>
+                <h3>Web Languages</h3>
+                <ul>
+                  <li>HTML5 (semantic structure)</li>
+                  <li>CSS3 (variables, media queries)</li>
+                  <li>JavaScript (vanilla UI toggles)</li>
+                </ul>
+              </article>
+    
+              <article>
+                <h3>Tools & Workflow</h3>
+                <ul>
+                  <li>Git & GitHub</li>
+                  <li>Cisco Packet Tracing</li>
+                  <li>WireShark</li>
+                </ul>
+              </article>
+    
+              <article>
+                <h3>Certifications</h3>
+                <ul>
+                  <li>TestOut CyberDefense Pro</li>
+                  <li>TestOut IT Fundamentals Pro</li>
+                  <li>Working toward: CCST/CCNA, Network+, Security+</li>
+                </ul>
+              </article>
+            </div>
+          </section>
 
   <footer class="site-footer" role="contentinfo">
     <p>© <span id="year"></span> Sthefanny Silva • <a href="mailto:st889798@ucf.edu">st889798@ucf.edu</a></p>
