Make header non-stick

--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
               <article>
                 <h3>Web Languages</h3>
                 <ul>
-                  <li>HTML5 (semantic structure)</li>
-                  <li>CSS3 (variables, media queries)</li>
+                  <li>HTML (semantic structure)</li>
+                  <li>CSS (variables, media queries)</li>
+                  <li>C</li>
+                  <li>Java</li>
                   <li>JavaScript (vanilla UI toggles)</li>
+                  <li>Python</li>
                 </ul>
               </article>
     
