Remove High Contrast toggle and styles

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </nav>
 
     <div class="header-actions">
-      <button id="contrastToggle" class="action-button" aria-pressed="false" aria-label="Toggle high contrast">High Contrast</button>
-      <!-- Replace this file or remove the button if you don't want it -->
+        <!-- Download Resume Button -->
       <a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download PDF</a>
     </div>
   </header>
