Skills style card + alignment

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section aria-labelledby="education-heading" class="card">
         <h2 id="education-heading">Education</h2>
         <article>
-          <h3>University of Central Florida — B.Sc. Information Technology</h3>
+          <h3>University of Central Florida — B.S. Information Technology</h3>
           <p><strong>Minor:</strong> Financial Technology · <strong>GPA:</strong> 3.0</p>
           <p><!-- TODO: Add graduation month/year (e.g., May 2026). --></p>
         </article>
@@ -109,7 +109,7 @@
   </main>
 
         <!-- UPDATED SKILLS for this project -->
-        <section class="skills" aria-labelledby="skills-heading">
+        <section class="skills card" aria-labelledby="skills-heading">
             <h2 id="skills-heading">Skills</h2>
             <div class="skill-groups">
               <article>
