Revert "Skills style card"
This reverts commit 548e285574cccf454d25bbfc8fb2321e7bea4e44.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!-- UPDATED SKILLS for this project -->
         <section class="skills" aria-labelledby="skills-heading">
             <h2 id="skills-heading">Skills</h2>
-            <div class="skill-cards">
+            <div class="skill-groups">
               <article>
                 <h3>Web Languages</h3>
                 <ul>
