--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </main>
 
         <!-- UPDATED SKILLS for this project -->
-        <section class="skills" aria-labelledby="skills-heading">
+        <section class="skills card" aria-labelledby="skills-heading">
             <h2 id="skills-heading">Skills</h2>
             <div class="skill-groups">
               <article>
