Added Skills in main

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
         </div>
       </section>
     </section>
-  </main>
 
         <!-- UPDATED SKILLS for this project -->
         <section class="skills card" aria-labelledby="skills-heading">
@@ -143,6 +142,8 @@
               </article>
             </div>
           </section>
+        </section>
+      </main>
 
   <footer class="site-footer" role="contentinfo">
     <p>© <span id="year"></span> Sthefanny Silva • <a href="mailto:st889798@ucf.edu">st889798@ucf.edu</a></p>
