Style nav as pill buttons

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 
   <header class="site-header" role="banner">
     <div class="brand">
-      <!-- <h1 class="site-title">Sthefanny Silva</h1> -->
-      <!-- <p class="site-tagline">Information Technology · University of Central Florida</p> -->
+      <h1 class="site-title">Sthefanny Silva</h1>
     </div>
 
     <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
       <ul>
-        <li><a href="index.html" aria-current="page">Home/Resume</a></li>
-        <li><a href="project1.html">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
+        <li><a class="nav-pill" href="index.html" aria-current="page">Home/Resume</a></li>
+        <li><a class="nav-pill" href="project1.html">Project 1</a></li>
+        <li><a class="nav-pill" href="project2.html">Project 2</a></li>
       </ul>
-    </nav>
+    </nav>    
 
     <div class="header-actions">
         <!-- Download Resume Button -->
@@ -54,7 +53,7 @@
       <section aria-labelledby="education-heading" class="card">
         <h2 id="education-heading">Education</h2>
         <article>
-          <h3>University of Central Florida — B.Sc. Information Technology</h3>
+          <h3>University of Central Florida — B.S. Information Technology</h3>
           <p><strong>Minor:</strong> Financial Technology · <strong>GPA:</strong> 3.0</p>
           <p><!-- TODO: Add graduation month/year (e.g., May 2026). --></p>
         </article>
