--- a/project1.html
+++ b/project1.html
@@ -18,9 +18,9 @@
 
     <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
       <ul>
-        <li><a href="index.html">Home/Resume</a></li>
-        <li><a href="project1.html" aria-current="page">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
+        <li><a class="nav-pill" href="index.html">Home/Resume</a></li>
+        <li><a class="nav-pill" href="project1.html" aria-current="page">Project 1</a></li>
+        <li><a class="nav-pill" href="project2.html">Project 2</a></li>
       </ul>
     </nav>
   </header>
