--- a/project2.html
+++ b/project2.html
@@ -18,8 +18,8 @@
 
     <nav id="site-nav" class="site-nav" role="navigation" aria-label="Primary">
       <ul>
-        <li><a class="nav-pill" href="index.html">Home/Resume</a></li>
-        <li><a class="nav-pill" href="project1.html">Project 1</a></li>
+        <li><a class="nav-pill" href="index.html">Home|Resume</a></li>
+        <li><a class="nav-pill" href="project1.html">EDESim</a></li>
         <li><a class="nav-pill" href="project2.html" aria-current="page">Project 2</a></li>
       </ul>
     </nav>
