--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="header-actions">
         <!-- Download Resume Button -->
       <a class="action-button" href="assets/Sthefanny_Silva_Resume.pdf" download>Download as PDF</a>
-      <!-- TODO: Input pdf to download (idea provider converter if website keeps updating instead of updating the resume separately)-->>
+      <!-- TODO: Input pdf to download (idea provider converter if website keeps updating instead of updating the resume separately)-->
     </div>
   </header>
 
@@ -88,10 +88,9 @@
             <div>
               <h3><a href="project1.html">Event-Driven Enterprise Simulator (EDESim)</a></h3>
               <p><!-- TODO: 1–2 sentence description. -->
-                A discrete-event simulation of enterprise operations. The model drives entities through
-                queues and resources using an event list (arrivals, service start/finish, departures).
-                It reports throughput, average wait time, and resource utilization. Scenarios are
-                configurable to test different arrival/service distributions and staffing.
+                A discrete-event simulation of enterprise operations. A small point-of-sale simulation for “Nile Dot Com.” 
+                Users look up items by ID from an inventory file, validate stock and quantity, add up to five items to a cart, 
+                apply tiered discounts and 6% tax, generate an invoice, and log each order to transactions.csv with a unique timestamped ID.
               </p>
               <ul class="badges">
                 <li>Java</li><li>Event-Driven</li><li>CSV I/O</li><li>Discounts/Tax</li><li>Transactions Log</li>
