First project demo disclaimer

--- a/project1.html
+++ b/project1.html
@@ -28,18 +28,19 @@
   <main id="content" class="narrow" role="main">
     <article class="project">
       <header>
-        <h2>Discrete-event simulation • 2025</h2>
+        <h2>Enterprise Computing • 2025</h2>
       </header>
 
       <figure class="project-figure">
-        <!--TODO: Upload Images-->>
+        <!--TODO: Upload Images-->
+
         <img src="assets/images/project1.jpg" alt="Image illustrating Project 1" />
         <figcaption>Simulates enterprise workflows using an event queue, resources, and processing times.</figcaption>
   </figure>
 
       <section aria-labelledby="p1-desc">
         <h3 id="p1-desc">Description</h3>
-        <p><!-- TODO: Paragraph describing problem, approach, outcome. -->
+        <p><!-- Paragraph describing problem, approach, outcome. -->
           This project simulates a checkout flow for a tiny e-store (“Nile Dot Com”). 
           The app guides the user step-by-step: search by Item ID, confirm availability, add to cart (max 5 distinct items), 
           apply quantity-based discounts and 6% tax, and show a final invoice. Each checkout appends a dated record to transactions.csv. 
@@ -51,6 +52,7 @@
         <!-- A) If you have a browser build deployed with GitHub Pages for this repo, keep this: -->
         <section class="card" aria-labelledby="demo-heading">
           <h3 id="demo-heading">Try the Simulator</h3>
+          <p class="disclaimer" role="note">“Prototype demo – does not reflect final implementation or performance.”</p>
           <div class="embed">
             <iframe
               src="https://sthef-silva.github.io/An-Event-driven-Enterprise-Simulation/web-demo/"
@@ -58,7 +60,7 @@
               loading="lazy">
             </iframe>
           </div>
-          <p><small>If the embed doesn’t load, <a class="nav-pill" href="https://sthef-silva.github.io/An-Event-driven-Enterprise-Simulation/" target="_blank" rel="noopener">open it in a new tab</a>.</small></p>
+          <p><small>If the embed doesn’t load, <a class="nav-pill" href="https://sthef-silva.github.io/An-Event-driven-Enterprise-Simulation/web-demo" target="_blank" rel="noopener">open it in a new tab</a>.</small></p>
         </section>
 
       <!--HOW TO: README-->
@@ -80,8 +82,6 @@
           <li>Business rules &amp; formatting</li>
           <li>Validation &amp; error handling</li>
           <li>Testing/QA artifacts</li>
-        </ul>
-
       <!--Java stack (use this instead if your project is Java)-->
         <ul>
           <li>Java (collections, OOP design, random distributions)</li>
